--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,7 +30,7 @@
 
         <div class="text">
           <p>Your Guesses:</p>
-          <b></b>
+          <br>
         </div>
       </div>
       <button class="btn" onclick="guessANumber()">Guess A Number</button>
